--- a/_posts/12-10-2020-Overpass.md
+++ b/_posts/12-10-2020-Overpass.md
@@ -2,7 +2,7 @@
 title: Overpass
 tags: [Web Enumeration, Exploitation, Priv]
 style: border
-color: black
+color: 
 description: TryHackMe CTF Challenge
 ---
 
